--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -34,6 +34,7 @@ dev = [
 test = [
     "pytest>=7.4.0",
     "pytest-asyncio>=0.21.1",
+    "pytest-cov>=4.1.0",
     "httpx>=0.25.0",
     "faker>=22.0.0",
     "pytest-watch>=4.2.0",
