--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,19 +4,10 @@ services:
   # Service FastAPI (utilise le Dockerfile existant)
   api:
     build:
-      context: ./backend
+      context: .
     ports:
       - "8000:80"
     env_file:
       - .env
-    depends_on:
-      - supabase
-    network_mode: "host"  # Pour communiquer facilement avec Supabase
-
-  # Service Supabase (utilise la CLI Supabase existante)
-  supabase:
-    image: supabase/cli:latest
-    command: start
     volumes:
-      - .:/workdir
-    network_mode: "host"  # Pour exposer tous les services Supabase
+      - ./backend:/app/backend
