[Refactor] Marquer le dossier /supabase pour suppression

--- a/supabase/.gitignore
+++ b/supabase/.gitignore
@@ -1,4 +1,5 @@
-# Supabase
-.branches
-.temp
-.env
+# Ce dossier a été supprimé dans la refactorisation
+# Le support Supabase local a été abandonné pour simplifier l'architecture
+# Ce fichier .gitignore est là pour indiquer que ce dossier doit être supprimé
+*
+!.gitignore
