--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,21 +36,42 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
+      
+      # Créer le fichier .env.test avant le build
+      - name: Generate .env.test file
+        run: |
+          cat > .env.test << EOF
+          PROJECT_NAME=test-ci
+          SUPABASE_URL=${{ secrets.SUPABASE_URL }}
+          SUPABASE_KEY=${{ secrets.SUPABASE_KEY }}
+          SUPABASE_SERVICE_KEY=${{ secrets.SUPABASE_SERVICE_KEY }}
+          POSTGRES_SERVER=${{ secrets.POSTGRES_SERVER }}
+          POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB=postgres
+          POSTGRES_PORT=5432
+          FIRST_SUPERUSER=${{ secrets.FIRST_SUPERUSER }}
+          FIRST_SUPERUSER_PASSWORD=${{ secrets.FIRST_SUPERUSER_PASSWORD }}
+          EOF
+          echo "Created .env.test file with CI credentials"
+      
+      # Installation temporaire pour la vérification de Supabase
+      - name: Verify Supabase Connection
+        run: |
+          python -m pip install python-dotenv httpx
+          python backend/scripts/verify_supabase.py
 
       - name: Build Docker image
         run: docker build --build-arg BUILD_ENV=test -t fastapi-supabase-template:test .
 
       - name: Run tests with coverage in Docker
         run: |
-          docker run -e PROJECT_NAME="${{ secrets.PROJECT_NAME }}" \
-            -e SUPABASE_URL="${{ secrets.SUPABASE_URL }}" \
-            -e SUPABASE_KEY="${{ secrets.SUPABASE_KEY }}" \
-            -e SUPABASE_SERVICE_KEY="${{ secrets.SUPABASE_SERVICE_KEY }}" \
-            -e POSTGRES_SERVER="${{ secrets.POSTGRES_SERVER }}" \
-            -e POSTGRES_USER="${{ secrets.POSTGRES_USER }}" \
-            -e FIRST_SUPERUSER="${{ secrets.FIRST_SUPERUSER }}" \
-            -e FIRST_SUPERUSER_PASSWORD="${{ secrets.FIRST_SUPERUSER_PASSWORD }}" \
-            -v $(pwd)/backend:/app/backend fastapi-supabase-template:test bash -c "cd /app/backend && python -m pytest --cov=app --cov-report=xml"
+          docker run \
+            -v $(pwd)/.env.test:/app/.env.test \
+            -v $(pwd)/backend:/app/backend \
+            fastapi-supabase-template:test \
+            bash -c "cd /app/backend && python -m pytest --cov=app --cov-report=xml -v"
+          
           # Copier les résultats de couverture depuis le conteneur
           docker cp $(docker ps -lq):/app/backend/coverage.xml ./backend/coverage.xml
 
@@ -73,6 +94,24 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      # Générer le fichier .env.test
+      - name: Generate .env.test file
+        run: |
+          cat > .env.test << EOF
+          PROJECT_NAME=test-ci
+          SUPABASE_URL=${{ secrets.SUPABASE_URL }}
+          SUPABASE_KEY=${{ secrets.SUPABASE_KEY }}
+          SUPABASE_SERVICE_KEY=${{ secrets.SUPABASE_SERVICE_KEY }}
+          POSTGRES_SERVER=${{ secrets.POSTGRES_SERVER }}
+          POSTGRES_USER=${{ secrets.POSTGRES_USER }}
+          POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }}
+          POSTGRES_DB=postgres
+          POSTGRES_PORT=5432
+          FIRST_SUPERUSER=${{ secrets.FIRST_SUPERUSER }}
+          FIRST_SUPERUSER_PASSWORD=${{ secrets.FIRST_SUPERUSER_PASSWORD }}
+          EOF
+          echo "Created .env.test file with CI credentials"
+
       # Créer une image Docker modifiée pour la version Python spécifique
       - name: Build Docker image for Python ${{ matrix.python-version }}
         run: |
@@ -83,15 +122,11 @@ jobs:
 
       - name: Run tests in Docker
         run: |
-          docker run -e PROJECT_NAME="${{ secrets.PROJECT_NAME }}" \
-            -e SUPABASE_URL="${{ secrets.SUPABASE_URL }}" \
-            -e SUPABASE_KEY="${{ secrets.SUPABASE_KEY }}" \
-            -e SUPABASE_SERVICE_KEY="${{ secrets.SUPABASE_SERVICE_KEY }}" \
-            -e POSTGRES_SERVER="${{ secrets.POSTGRES_SERVER }}" \
-            -e POSTGRES_USER="${{ secrets.POSTGRES_USER }}" \
-            -e FIRST_SUPERUSER="${{ secrets.FIRST_SUPERUSER }}" \
-            -e FIRST_SUPERUSER_PASSWORD="${{ secrets.FIRST_SUPERUSER_PASSWORD }}" \
-            -v $(pwd)/backend:/app/backend fastapi-test:${{ matrix.python-version }} bash -c "cd /app/backend && python -m pytest"
+          docker run \
+            -v $(pwd)/.env.test:/app/.env.test \
+            -v $(pwd)/backend:/app/backend \
+            fastapi-test:${{ matrix.python-version }} \
+            bash -c "cd /app/backend && python -m pytest -v"
 
   # Déploiement (uniquement pour les tags de version)
   release:
