adding exclusion rule to pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -64,3 +64,5 @@ ci:
   autofix_prs: true
   autoupdate_commit_msg: ⬆ [pre-commit.ci] pre-commit autoupdate
   autoupdate_schedule: monthly
+
+exclude: .github/workflows/*.yml
