--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -27,6 +27,7 @@ dev = [
     "pre-commit>=3.8.0",
     "pytest-sugar>=1.0.0",
     "pytest>=8.3.2",
+    "pytest-asyncio>=0.21.1",
     "httpx>=0.28.1",
 ]
 
