[FIX] Ajout d'un filtre pour ignorer l'avertissement AsyncMockMixin

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -55,7 +55,10 @@ exclude = ["venv", ".venv", "alembic"]
 # Ref: https://docs.pytest.org/en/stable/reference/reference.html#command-line-flags
 addopts = "-rXs --strict-config --strict-markers --tb=short"
 xfail_strict = true         # Treat tests that are marked as xfail but pass as test failures
-# filterwarnings = ["error"]  # Treat all warnings as errors
+# Filtre pour ignorer le warning spécifique de coroutine non-awaited dans AsyncMockMixin
+filterwarnings = [
+    "ignore::RuntimeWarning:(?!pytest).*:coroutine 'AsyncMockMixin._execute_mock_call' was never awaited",
+]
 pythonpath = "app"
 
 [tool.coverage.run]
